# trading-system

./: .env.example  .gitignore  AUDITORIA_PRE_GOLIVE.md  AUDIT_REPORT_20260422.md  CLAUDE.md  Makefile  PLAN_KAIZEN_PROMOTION.md  PLAN_MEJORAS_KAIZEN_v2.md  PLAN_MIGRACION_LIVE.md  PLAN_OPTIMIZACION_EMAILS.md  PLAN_V2.md  PLAN_V2_ADDENDUM.md  PROMPT_APLICAR_DECISIONES.md  PROMPT_AUDITORIA.md  PROMPT_AUDITORIA_GO_LIVE.md  PROMPT_CLAUDE_CODE.md  PROMPT_FASE_1_VISIBILIDAD.md  PROMPT_FIX_VENTAS_Y_EMAILS.md  PROMPT_WATCHDOGS_Y_FIXES.md  PROMPT_fix_mrev_watchdog_y_emails.md  PROMPT_fix_terminal_escape_noise.md  Plan_Agresivo_8_10_Trading_Bots.docx  README.md  RUNBOOK.md  RUNBOOK_WATCHDOGS.md  Trading_Bots_Analisis_Exhaustivo.docx  _bracket_orders.py  _cooldowns.py  _db_health.py  _email_helpers.py  _exit_logic.py  _kaizen_enrichment.py  _kaizen_missed.py  _kaizen_monthly_metrics.py  _kaizen_overrides.py  _kaizen_rules.py  _regime_filter.py  _shadow_trades.py  _sheets_logger.py  _trade_logger.py  (+38 more)
config/: __init__.py  settings.py
logs/: kaizen_health.jsonl  kaizen_health.jsonl.bak-1  kaizen_health.jsonl.bak-2  kaizen_health.jsonl.bak-3  kaizen_health.jsonl.bak-4  kaizen_health.jsonl.bak-5  kaizen_health.jsonl.bak-6  kaizen_health.jsonl.bak-7  kaizen_missed_moves.jsonl  kaizen_missed_moves.jsonl.bak-1  trade_events_mrev.jsonl.bak-2  trade_events_mrev.jsonl.bak-5  trade_events_mrev.jsonl.bak-6  trade_events_rftm.jsonl.bak-1
migrations/: env.py
scripts/: STATE_DB.md  audit_alpaca_orders.py  audit_entry_snapshot.py  dump_trade_events.py  init_db.sql  kaizen_decision.py  kaizen_decision_email.py  kaizen_monthly_report.py  kaizen_review.py  migrate.sh  seed_market_data.py  seed_symbols.py  shadow_tick.py  smoke_test.sh  start_dev.sh  state_db_push.sh  sync_db.sh
(+116 files in other folders)
