[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "trading-system"
version = "0.1.0"
description = "Algorithmic Trading System V1 — RFTM Strategy"
requires-python = ">=3.11"
dependencies = [
    # Web
    "fastapi==0.111.1",
    "uvicorn[standard]==0.30.1",
    # Database
    "sqlalchemy==2.0.31",
    "alembic==1.13.2",
    "psycopg2-binary==2.9.9",
    # Validation / Config
    "pydantic==2.8.2",
    "pydantic-settings==2.4.0",
    "python-dotenv==1.0.1",
    # Logging
    "structlog==24.4.0",
    # HTTP client (broker / data APIs)
    "httpx==0.27.0",
    # Data / Indicators
    "pandas==2.2.2",
    "numpy==1.26.4",
    # Scheduling
    "apscheduler==3.10.4",
    # Utilities
    "python-dateutil==2.9.0",
    "pytz==2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "pytest-cov==5.0.0",
    "pytest-asyncio==0.23.7",
    "httpx==0.27.0",     # TestClient
    "ruff==0.5.4",
    "mypy==1.11.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "packages*", "config*"]

# ── Ruff (linter) ──────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

# ── Pytest ─────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

# ── Mypy ───────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
